feat: frontend integration to backend

--- a/classification.service/src/docs/components.yml
+++ b/classification.service/src/docs/components.yml
@@ -23,9 +23,19 @@ components:
           type: array
           items:
             type: string
+        colors:
+          type: object
+          properties:
+            URGENT:
+              type: string
+            SOMETHING:
+              type: string
+            UKNOWN:
+              type: string
       example:
         listA: ['the', 'cat', 'sat']
         listB: ['I', 'like', 'turtles']
+        colors: { URGENT: 'secondary', SOMETHING: 'primary', UNKNOWN: 'default' }
     User:
       type: object
       properties:
