--- a/classification.service/docker-compose.dev.yml
+++ b/classification.service/docker-compose.dev.yml
@@ -2,5 +2,5 @@ version: '3'
 
 services:
   node-app:
-    container_name: node-app-dev
+    container_name: classification-app-dev
     command: yarn dev -L
