--- a/classification.service/docker-compose.prod.yml
+++ b/classification.service/docker-compose.prod.yml
@@ -2,5 +2,5 @@ version: '3'
 
 services:
   node-app:
-    container_name: node-app-prod
+    container_name: classification-app-prod
     command: yarn start
