--- a/classification.service/docker-compose.test.yml
+++ b/classification.service/docker-compose.test.yml
@@ -2,5 +2,5 @@ version: '3'
 
 services:
   node-app:
-    container_name: node-app-test
+    container_name: classification-app-test
     command: yarn test
