--- a/.github/workflows/node-backend-test.js.yml
+++ b/.github/workflows/node-backend-test.js.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./frontend
+        working-directory: ./classification.service
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
